--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,13 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  h3 Example creation usage:
+  code [app]/https://www.google.com
+  br
+  code [app]/http://foo.com:80
+  
+  h3 Example output creation:
+  code { "original_url":"http://foo.com:80", "short_url":"[app]/8170" }
+  
+  h3 Will redirect to
+  code https://www.google.com/
