--- a/views/index.pug
+++ b/views/index.pug
@@ -2,9 +2,13 @@ extends layout
 
 block content
   h3 Example creation usage:
-  code [app]/https://www.google.com
+  code 
+    span.app-url
+    | https://www.google.com
   br
-  code [app]/http://foo.com:80
+  code
+    span.app-url
+    | http://foo.com:80
   
   h3 Example output creation:
   code { "original_url":"http://foo.com:80", "short_url":"[app]/8170" }
